# NSU_CPPLabs

lab0/: CMakeLists.txt  lab0.cpp
lab1_bitset/: CMakeLists.txt
lab1_bitset/Tests/: CMakeLists.txt  test.cpp
lab1_bitset/bitset/: CMakeLists.txt  bitset.cpp  bitset.h
lab2_game_of_life_v1.0/: CMakeLists.txt  lab2.cpp
lab2_game_of_life_v1.0/MagicWord/: CMakeLists.txt  MagicWord.cpp  MagicWord.h
lab2_game_of_life_v1.0/Tests/: CMakeLists.txt  test.cpp
lab2_game_of_life_v1.0/Tests/Test_files/: 1-1c.txt  2-1c.txt  2-1i.txt  3-1c.txt  3-1i.txt  4-1c.txt  4-1i.txt  4-2c.txt  4-3c.txt  4-4c.txt  5-1o.txt
lab2_game_of_life_v1.0/UI/: CMakeLists.txt  UI.cpp  UI.h
lab2_game_of_life_v1.0/field/: CMakeLists.txt  field.cpp  field.h
lab3_Sound_processor/: lab3_Sound_processor.sln
lab3_Sound_processor/Debug/: cmd.txt  config0.txt  config1.txt  lab3_Sound_processor.ilk
lab3_Sound_processor/lab3_Sound_processor/: ErrorsHierarchy.cpp  ErrorsHierarchy.h  Factory.h  documentation.txt  lab3_Sound_processor.cpp  lab3_Sound_processor.vcxproj  lab3_Sound_processor.vcxproj.filters  parser.cpp  parser.h
lab3_Sound_processor/lab3_Sound_processor/Debug/: lab3_sound_processor.obj.enc  vc141.idb
lab3_Sound_processor/lab3_Sound_processor/Debug/lab3_Sou.999665C2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab3_Sound_processor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
